<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="165dp"
                        android:background="@color/purple_700"
                        android:orientation="vertical">

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="97dp"
                        android:layout_marginEnd="2dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_circular_image"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profileicon"
                            />

                        <TextView
                            android:id="@+id/tvUsername"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Username"
                            android:textColor="@color/button_back"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/tvbio"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Username"
                            android:textColor="#757575"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_below="@+id/linearProfile"
                        android:id="@+id/linearSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <SearchView
                            android:id="@+id/searchView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:iconifiedByDefault="false"
                            android:padding="4dp"
                            android:queryHint="Search for City Weather" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_below="@+id/linearSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:descendantFocusability="blocksDescendants"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/city_name_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/current_label"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="@color/material_blue"
                            android:textStyle="bold" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/todayMaterialCard"
                            android:clickable="true"
                            android:focusable="true"
                            style="@style/Widget.MaterialComponents.CardView"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_view_height"
                            android:layout_marginStart="@dimen/spacing_mlarge"
                            android:layout_marginEnd="@dimen/spacing_mlarge"
                            app:cardBackgroundColor="@color/material_blue"
                            app:cardCornerRadius="30dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="@dimen/spacing_medium">

                                <TextSwitcher
                                    android:id="@+id/temp_text_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layoutDirection="ltr"
                                    android:layout_gravity="center" />

                                <TextSwitcher
                                    android:id="@+id/description_text_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/spacing_large"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal"
                                            android:padding="@dimen/spacing_middle">

                                            <androidx.appcompat.widget.AppCompatTextView
                                                style="@style/TextViewInColoredCard"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:gravity="center"
                                                android:text="@string/humidity_label"
                                                android:textStyle="bold" />

                                            <View
                                                android:layout_width="@dimen/spacing_medium"
                                                android:layout_height="0dp" />

                                            <TextSwitcher
                                                android:id="@+id/humidity_text_view"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center" />
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal"
                                            android:padding="@dimen/spacing_middle">

                                            <androidx.appcompat.widget.AppCompatTextView
                                                style="@style/TextViewInColoredCard"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:gravity="center"
                                                android:text="@string/wind_label"
                                                android:textStyle="bold" />

                                            <View
                                                android:layout_width="@dimen/spacing_medium"
                                                android:layout_height="0dp" />

                                            <TextSwitcher
                                                android:id="@+id/wind_text_view"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center" />
                                        </LinearLayout>
                                    </LinearLayout>


                                    <com.airbnb.lottie.LottieAnimationView
                                        android:id="@+id/animation_view"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        app:lottie_autoPlay="true"
                                        app:lottie_loop="true" />

                                </LinearLayout>
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>


                    </LinearLayout>

                </RelativeLayout>


            </ScrollView>

        </LinearLayout>






        <TextView
            android:visibility="gone"
            android:id="@+id/tvRedirectLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="already_have_an_account_login"
            android:textColor="#18206F"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
